# jarvis

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
graphify-out/: .graphify_labels.json  .graphify_python  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
openspec/.plus/: last-update-check
openspec/specs/authorized-document-upload/: spec.md
openspec/specs/conversation-logs/: spec.md
openspec/specs/faq-discovery/: spec.md
openwiki/: .last-update.json  index.md  quickstart.md
openwiki/architecture/: index.md  overview.md  source-map.md
openwiki/domain/: index.md  knowledge-model.md
openwiki/integrations/: index.md  infrastructure.md
openwiki/operations/: index.md  runbook.md
openwiki/testing/: index.md  testing-guide.md
openwiki/workflows/: index.md  ingestion-and-qa.md
scripts/: backup.sh  restore.sh  setup-dev.sh
src/: main.py
src/api/: app.py  audit.py  auth.py  health.py  rate_limit.py  routes.py
src/common/: exceptions.py  logging.py
src/config/: models.py  settings.py
src/conversation/: analytics.py  cache.py  clustering.py  faq.py  logs.py
src/graph/: driver.py  embeddings.py  entities.py  extraction.py  provenance.py  schema.py  seed.py
src/ingestion/: crawler.py  detector.py  document_processor.py  extractor.py  storage.py  tasks.py  worker.py
src/retrieval/: citations.py  generation.py  hybrid.py  safety.py  search.py  source_status.py  traversal.py
tests/: sample_questions.py  test_evaluation.py  test_regression.py
(+14 files in other folders)
